[gd_scene load_steps=2 format=3 uid="uid://t2ob1gqccyas"]

[ext_resource type="Script" path="res://PauseMenu.gd" id="1_yyw63"]

[node name="PauseMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yyw63")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.819608, 0.890196, 0.992157, 0.317647)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 10

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "En pause"

[node name="button_reprise" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Reprendre"

[node name="button_options" type="Button" parent="GridContainer"]
visible = false
layout_mode = 2
text = "Options"

[node name="button_quit" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Quitter"

[connection signal="pressed" from="GridContainer/button_reprise" to="." method="_on_button_reprise_pressed"]
[connection signal="pressed" from="GridContainer/button_options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="GridContainer/button_quit" to="." method="_on_button_quit_pressed"]
